<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="299dp"
        android:layout_height="83dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/game_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="303dp"
        android:layout_height="245dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="Button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="Button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="Button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="Button"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="btnToStartScreen"
        android:text="Выйти"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rounds_count"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/rounds_count"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="398dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounds_count">

        <TextView
            android:id="@+id/first_player_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/first_player"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/second_player_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/second_player"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.401">

        <TextView
            android:id="@+id/first_player_score"
            android:layout_width="48dp"
            android:layout_height="38dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/first_player_score"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/second_player_score"
            android:layout_width="48dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/second_player_score"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>